Ex 1. Recursion - head recursion way (Square of n nums)

--- a/Recursion/1. Ex 1 - Square of n numbers.ipynb
+++ b/Recursion/1. Ex 1 - Square of n numbers.ipynb
@@ -45,6 +45,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Recusive way (Head Recursion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square_of_n_head_rec(n):\n",
+    "    if n > 0:\n",
+    "        square_of_n_head_rec(n-1)\n",
+    "        print(n * n, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 9 16 25 "
+     ]
+    }
+   ],
+   "source": [
+    "square_of_n_head_rec(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
