Ex 1. Recursion - tail recursion way (Square of n nums)

--- a/Recursion/1. Ex 1 - Square of n numbers.ipynb
+++ b/Recursion/1. Ex 1 - Square of n numbers.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,11 +79,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive way (Tail Recursion)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def square_of_n_tail_rec(n):\n",
+    "    if n > 0:\n",
+    "        print(n * n, end = \" \")\n",
+    "        square_of_n_tail_rec(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36 25 16 9 4 1 "
+     ]
+    }
+   ],
+   "source": [
+    "square_of_n_tail_rec(6)"
+   ]
   }
  ],
  "metadata": {
