--- a/Recursion/2. Ex 2 - Factorial of n.ipynb
+++ b/Recursion/2. Ex 2 - Factorial of n.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,44 @@
    "source": [
     "Input = int(input('Enter an integer value:')) \n",
     "print(f'Factorial of {Input} is {iter_factorial(Input)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rec_factorial(n):\n",
+    "    if n==1:\n",
+    "        return(1)\n",
+    "    else:\n",
+    "        return(n * rec_factorial(n-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 7 is 5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "Input = int(input('Enter an integer value:')) \n",
+    "print(f'Factorial of {Input} is {rec_factorial(Input)}')"
    ]
   }
  ],
