Ex 2. Factorial of n (Change in input description)

--- a/Recursion/2. Factorial of n.ipynb
+++ b/Recursion/2. Factorial of n.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "Input = int(input('Enter an integer value:')) \n",
+    "Input = int(input('Enter a positive integer value:')) \n",
     "print(f'Factorial of {Input} is {iter_factorial(Input)}')"
    ]
   },
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "Input = int(input('Enter an integer value:')) \n",
+    "Input = int(input('Enter a positive integer value:')) \n",
     "print(f'Factorial of {Input} is {rec_factorial(Input)}')"
    ]
   }
