--- a/Recursion/3. Sum to n numbers.ipynb
+++ b/Recursion/3. Sum to n numbers.ipynb
@@ -44,6 +44,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_to_n_iter(n):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        sum += i\n",
+    "    return(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum upto 7 numbers is 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter an integer value higher than 0:\"))\n",
+    "print(f'Sum upto {n} numbers is {sum_to_n_iter(n)}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
