--- a/Recursion/3. Sum to n numbers.ipynb
+++ b/Recursion/3. Sum to n numbers.ipynb
@@ -82,11 +82,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive way"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum_to_n_rec(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return(n + sum_to_n_rec(n-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum upto 8 numbers is 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter an integer value higher than 0:\"))\n",
+    "print(f'Sum upto {n} numbers is {sum_to_n_rec(n)}')"
+   ]
   }
  ],
  "metadata": {
