Ex 2. Binary Search (Recursive way)

--- a/Searching/2. Binary Search.ipynb
+++ b/Searching/2. Binary Search.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Example 1\n",
+    "#Example 2\n",
     "A = [2, 13, 25, 32, 44, 67]\n",
     "\n",
     "ele = 38"
@@ -114,6 +114,112 @@
    ],
    "source": [
     "found = bin_search_iter(A, ele)\n",
+    "if found != -1:\n",
+    "    print(f'Element is found at index {found}')\n",
+    "else:\n",
+    "    print('Element not found')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bin_search_rec(A, ele, low, high):\n",
+    "    '''\n",
+    "    input\n",
+    "    -----\n",
+    "    A: Sorted array of numbers\n",
+    "    ele: The element to be searched\n",
+    "    low: lowest index of the array to be searched\n",
+    "    high: highest index of the array to be searched\n",
+    "    \n",
+    "    output\n",
+    "    ------\n",
+    "    mid: index if the key is found\n",
+    "    -1: if the key is not found\n",
+    "    '''\n",
+    "\n",
+    "    if low <= high:\n",
+    "        mid = (low + high)//2\n",
+    "        if ele == A[mid]:\n",
+    "            return(mid)\n",
+    "        elif ele < A[mid]:\n",
+    "            return(bin_search_rec(A, ele, low, mid-1))\n",
+    "        else:\n",
+    "            return(bin_search_rec(A, ele, mid+1, high))\n",
+    "    else:\n",
+    "        return(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Example 1\n",
+    "A = [2, 13, 25, 32, 44, 67]\n",
+    "\n",
+    "ele = 44"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element is found at index 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "found = bin_search_rec(A, ele, 0, len(A)-1)\n",
+    "if found != -1:\n",
+    "    print(f'Element is found at index {found}')\n",
+    "else:\n",
+    "    print('Element not found')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Example 2\n",
+    "A = [2, 13, 25, 32, 44, 67]\n",
+    "\n",
+    "ele = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "found = bin_search_rec(A, ele, 0, len(A)-1)\n",
     "if found != -1:\n",
     "    print(f'Element is found at index {found}')\n",
     "else:\n",
