Ex. 1 Selection Sort

--- a/Sorting/1. Selection Sort.ipynb
+++ b/Sorting/1. Selection Sort.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This program demonstrates Insertion Sort"
+    "This program demonstrates Selection Sort"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insertion_sort(A):\n",
+    "def selection_sort(A):\n",
     "    '''\n",
     "    input\n",
     "    -----\n",
