--- a/Sorting/2. Insertion Sort.ipynb
+++ b/Sorting/2. Insertion Sort.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This program demonstrates Selection Sort"
+    "This program demonstrates Insertion Sort"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selection_sort(A):\n",
+    "def insertion_sort(A):\n",
     "    '''\n",
     "    input\n",
     "    -----\n",
@@ -26,14 +26,13 @@
     "\n",
     "    n = len(A)\n",
     "\n",
-    "    for i in range(n-1):\n",
-    "        pos = i\n",
-    "        for j in range(i+1, n):\n",
-    "            if A[pos] > A[j]:\n",
-    "                pos = j\n",
-    "        temp = A[i]\n",
-    "        A[i] = A[pos]\n",
-    "        A[pos] = temp\n",
+    "    for i in range(1,n):\n",
+    "        ele = A[i]\n",
+    "        idx = i\n",
+    "        while((idx > 0) & (ele < A[idx-1])):\n",
+    "            A[idx] = A[idx-1]\n",
+    "            idx = idx - 1\n",
+    "        A[idx] = ele\n",
     "\n",
     "    return(A)"
    ]
@@ -63,7 +62,7 @@
    ],
    "source": [
     "print(f'Unsorted Array: {A}')\n",
-    "print(f'Sorted Array: {selection_sort(A)}')"
+    "print(f'Sorted Array: {insertion_sort(A)}')"
    ]
   }
  ],
